# new_practices

./: .gitignore  .travis.yml
new_practice/: .coverage  ChangeLog
new_practice/Relational_database_management/: attr_objects.py  attr_objects_zero.py  listens.py  listens_http.py  my_context.py  mycontext.py  mycontext_try.py  open_two_file.py  open_two_files.py  snare_drum.hy  snare_drum.py
new_practice/abstract_syntax_tree/: ast_ext.py  ast_nodetrasfirmer.py  classdef_practice.hy  setup.cfg
new_practice/decorators_practice/: abc_decorators.py  abc_decorators_meta.py  abc_decorators_metaclass.py  abc_decorators_super.py  check_is_names.py  check_name.py  decarators_dicts.py  decarators_indetity.py  decorators_class.py  pizza_classmethod.py  pizza_ingredients.py  simple_abstraction.py  wrap_functools_decorators.py  wrap_functools_decorators_inspect.py  wrapper_function_decorators.py
new_practice/foobar/: .travis.yml  client.py  server.py  setup.py  tox.ini
new_practice/foobar.egg-info/: PKG-INFO  SOURCES.txt  pbr.json
new_practice/functional_programming/: clean_function.py  function_any_all.py  function_capitalize.py  function_enumerate.py  function_not_lambda.cprof  function_not_lambda.py  function_send.py
new_practice/hooks/: checks.hy  meta_importer.py
new_practice/htmlcov/: index.html  status.json  (+9 more)
new_practice/practice_setup/: console_setuptools_practice.py  date_practice.py  practice_api_remove.py  practice_api_remove_auto.py  practice_setuptools.py  setup.cfg  setup_practice.py  setup_practice_setuptools.py
source/: conf.py
(+34 files in other folders)
