[metadata]
name = foobar
author = Pavel Malin
author-email = foobar@example.org
license = MIT
long_description = file: README.rst
url = http://pypi.python.org/pypi/foobar
requires-python = >=3.7
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[wheel]
universal=1